--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <a href="#features">Features</a>
     <a href="#demo">Demo</a>
     <a href="#testimonials">Testimonials</a>
-    <a href="#contact" class="btn-header">Get Started</a>
+    <a href="#" class="btn-header" onclick="showLink()">Get Started</a>
   </nav>
 </header>
 
@@ -135,3 +135,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
